<resources>
    <string name="app_name">GossipsBolo</string>
    <string name="type_a_message">Type_a_message_Here</string>
    <string name="refresh">refresh</string>
    <string name="status">status</string>
    <string name="settings">settings</string>
    <string name="chattercontact_search">chattercontact_search</string>
    <string name="add_chattercontacts">add_chattercontacts</string>
    <string name="clear_log">clearlog</string>
    <string name="audiovideocallsearch">audiovideocallsearch</string>
    <string name="audiovideocalllist">audiovideocalllist</string>
    <string name="newgroup">newgroup</string>
    <string name="newbroadcast">newbroadcast</string>
    <string name="starredmessage">starredmessage</string>
    <string name="recentgossips_search">recentgossips_search</string>
    <string name="select_chatter">select_chatter</string>
    <string name="view_contact">view_contact</string>
    <string name="media">media</string>
    <string name="mute">mute</string>
    <string name="wallpaper">wallpaper</string>
    <string name="block">block</string>
    <string name="clear_chat">clear_chat</string>
    <string name="email_chat">email_chat</string>
    <string name="audiovideobutton">avcallbutton</string>
    <string name="attachment_files">attachmentfiles</string>

    <string-array name="extraFeatures">
        <item>Timeline</item>
        <item>News</item>
        <item>Cricket Score</item>
        <item>Trending Videos</item>
        <item>Angelina</item>
    </string-array>


    <string name="drawer_closed">DrawerClosed</string>
    <string name="drawer_opened">DrawerOpened</string>
    <string name="lbl_alert_ok">OK</string>
    <string name="login">Login</string>

    <string name="loading">Loading.....</string>
    <string name="lbl_error_mobileNumber">Incorrect Mobile Number</string>
    <string name="lbl_error_profileName">Choose valid one</string>
</resources>
