<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/view_contact"
        android:title="@string/view_contact"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/media"
        android:title="@string/media"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item
        android:id="@+id/mute"
        android:title="@string/mute"
        android:orderInCategory="3"
        app:showAsAction="never"/>

    <item
        android:id="@+id/wallpaper"
        android:title="@string/wallpaper"
        android:orderInCategory="4"
        app:showAsAction="never"/>
    <item
        android:id="@+id/block"
        android:title="@string/block"
        android:orderInCategory="5"
        app:showAsAction="never"/>

    <item
        android:id="@+id/clear_chat"
        android:title="@string/clear_chat"
        android:orderInCategory="6"
        app:showAsAction="never"/>
    <item
        android:id="@+id/email_chat"
        android:title="@string/email_chat"
        android:orderInCategory="7"
        app:showAsAction="never"/>

    <item
        android:title="@string/audiovideobutton"
        android:id="@+id/audiovideocallbtn"
        android:orderInCategory="8"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_phone_plus" />


    <item
        android:title="@string/attachment_files"
        android:id="@+id/attach"
        android:orderInCategory="9"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_attachment" />


</menu>